--- a/dc-esp32-gate-min.yaml
+++ b/dc-esp32-gate-min.yaml
@@ -65,6 +65,7 @@ captive_portal:
 
 # https://esphome.io/components/api.html
 api:
+  reboot_timeout: 0s
 
 # https://esphome.io/components/ota.html
 ota:
