--- a/dc-s31-vac-control-min.yaml
+++ b/dc-s31-vac-control-min.yaml
@@ -71,6 +71,7 @@ captive_portal:
 
 # https://esphome.io/components/api.html
 api:
+  reboot_timeout: 0s
 
 # https://esphome.io/components/ota.html
 ota:
