--- a/dc-s31-tool-sensor-min.yaml
+++ b/dc-s31-tool-sensor-min.yaml
@@ -19,7 +19,7 @@ substitutions:
   project_ver_num: "1.0.0"
   project_ver_let: t
 
-  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-tool-sensor.yaml@v1.0
+  sub_import_url: github://buzzkc/docker-dust-collection/s31-tool-update.yaml@v1.0
   
   mqtt_broker: "0.0.0.0"
   mqtt_prefix: "buzzkc/dc" 
@@ -67,6 +67,7 @@ captive_portal:
 
 # https://esphome.io/components/api.html
 api:
+  reboot_timeout: 0s
 
 # https://esphome.io/components/ota.html
 ota:
