--- a/dc-s31-tool-sensor.yaml
+++ b/dc-s31-tool-sensor.yaml
@@ -22,7 +22,7 @@ substitutions:
   project_ver_num: "1.0.9"
   project_ver_let: t
 
-  sub_import_url: github://buzzkc/docker-dust-collection/dc-s31-tool-sensor.yaml@v1.0
+  sub_import_url: github://buzzkc/docker-dust-collection/s31-tool-update.yaml@v1.0
 
   sub_ota_num_attempts: '15'
   
@@ -79,6 +79,7 @@ captive_portal:
 
 # https://esphome.io/components/api.html
 api:
+  reboot_timeout: 0s
 
 
 # https://esphome.io/components/ota.html
