--- a/dc-s31-tool-sensor.yaml
+++ b/dc-s31-tool-sensor.yaml
@@ -184,7 +184,7 @@ binary_sensor:
       number: ${switch_pin}
       mode: INPUT_PULLUP
       inverted: True
-    id: button
+    id: button1
     #filters:
     #  - delayed_on: 50ms    # debounce for press
     #  - delayed_off: 50ms   # debounce for release
