--- a/gate-update.yaml
+++ b/gate-update.yaml
@@ -9,5 +9,5 @@ packages:
       - path: dc-esp32-gate.yaml  
         vars:
           device_name: ${name} #override with current sensors name
-    ref: main  # optional
+    ref: v1.0  # optional
     refresh: 1d  # optional
