--- a/s31-vac-update.yaml
+++ b/s31-vac-update.yaml
@@ -9,6 +9,5 @@ packages:
       - path: dc-s31-vac-control.yaml
         vars:
           device_name: ${name} #override with current sensors name
-    ref: main  # optional
-    ref: main  # optional
+    ref: v1.0  # optional
     refresh: 1d  # optional
