--- a/gate-update.yaml
+++ b/gate-update.yaml
@@ -4,8 +4,9 @@ packages:
   #remote_package_shorthand: github://buzzkc/docker-dust-collection/gate-update.yaml@main
 
   remote_package_files:
-    url: http://github.com/buzzkc/docker-dust-collection@v1.0.11
+    url: http://github.com/buzzkc/docker-dust-collection
     files: 
       - path: dc-esp32-gate.yaml  
         vars:
           device_name: ${name} #override with current sensors name
+        ref: v1.0.11
