--- a/s31-tool-update.yaml
+++ b/s31-tool-update.yaml
@@ -4,8 +4,9 @@ packages:
   #remote_package_shorthand: github://buzzkc/docker-dust-collection/s31-tool-update.yaml@main
 
   remote_package_files:
-    url: https://github.com/buzzkc/docker-dust-collection@v1.0.11
+    url: https://github.com/buzzkc/docker-dust-collection
     files: 
       - path: dc-s31-tool-sensor.yaml
         vars:
           device_name: ${name} #override with current sensors name
+        ref: v1.0.11
